--- a/frontend/src/app/shared/components/paginator/paginator.component.html
+++ b/frontend/src/app/shared/components/paginator/paginator.component.html
@@ -1,1 +1,13 @@
-<p>paginator works!</p>
+@if (shouldShowPaginator()) {
+  <div class="paginator-container">
+    <nz-pagination
+      [nzPageIndex]="pageInfo().pageNumber + 1"
+      [nzPageSize]="pageInfo().pageSize"
+      [nzTotal]="pageInfo().totalElements"
+      [nzPageSizeOptions]="pageSizeOptions()"
+      [nzShowSizeChanger]="true"
+      (nzPageIndexChange)="onPageIndexChange($event)"
+      (nzPageSizeChange)="onPageSizeChange($event)"
+    ></nz-pagination>
+  </div>
+}
