--- a/frontend/src/app/shared/components/vote/vote.component.html
+++ b/frontend/src/app/shared/components/vote/vote.component.html
@@ -1,1 +1,27 @@
-<p>vote works!</p>
+<div class="vote-widget-horizontal">
+  <button
+    nz-button
+    nzType="text"
+    class="vote-button"
+    [class.voted-up]="userVote() === 1"
+    (click)="onVote(1)"
+    aria-label="Upvote"
+    [attr.aria-pressed]="userVote() === 1"
+  >
+    <span nz-icon [nzType]="userVote() === 1 ? 'arrow-up' : 'arrow-up'"></span>
+  </button>
+
+  <span class="score">{{ score() }}</span>
+
+  <button
+    nz-button
+    nzType="text"
+    class="vote-button"
+    [class.voted-down]="userVote() === -1"
+    (click)="onVote(-1)"
+    aria-label="Downvote"
+    [attr.aria-pressed]="userVote() === -1"
+  >
+    <span nz-icon [nzType]="userVote() === 1 ? 'arrow-down' : 'arrow-down'"></span>
+  </button>
+</div>
