--- a/frontend/src/app/features/auth/pages/register-page/register-page.component.html
+++ b/frontend/src/app/features/auth/pages/register-page/register-page.component.html
@@ -1,1 +1,70 @@
-<p>register-page works!</p>
+<div class="login-container">
+  <div class="login-form">
+    <div class="flex justify-center mb-4">
+      <img src="assets/images/TunivLogo.svg" alt="Tuniv Logo" class="h-12 w-12" />
+    </div>
+    <h2 class="form-title">Create an Account</h2>
+    <p class="form-subtitle">Join the Tuniv community today</p>
+
+    <form nz-form [formGroup]="registerForm" (ngSubmit)="submitForm()">
+      <nz-form-item>
+        <nz-form-control nzErrorTip="Please enter a valid username (3-20 characters)">
+          <nz-input-group nzPrefixIcon="user">
+            <input type="text" nz-input formControlName="username" placeholder="Username" />
+          </nz-input-group>
+        </nz-form-control>
+      </nz-form-item>
+
+      <nz-form-item>
+        <nz-form-control nzErrorTip="Please enter a valid email address">
+          <nz-input-group nzPrefixIcon="mail">
+            <input type="email" nz-input formControlName="email" placeholder="Email" />
+          </nz-input-group>
+        </nz-form-control>
+      </nz-form-item>
+
+      <nz-form-item>
+        <nz-form-control nzErrorTip="Password must be at least 6 characters">
+          <nz-input-group [nzSuffix]="suffixTemplate" nzPrefixIcon="lock">
+            <input [type]="passwordVisible() ? 'text' : 'password'" nz-input formControlName="password" placeholder="Password" />
+          </nz-input-group>
+          <ng-template #suffixTemplate>
+            <span nz-icon [nzType]="passwordVisible() ? 'eye' : 'eye-invisible'" (click)="togglePasswordVisibility()"></span>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+
+      <nz-form-item>
+        <nz-form-control [nzErrorTip]="passwordErrorTpl">
+          <nz-input-group [nzSuffix]="confirmSuffixTemplate" nzPrefixIcon="lock">
+            <input [type]="confirmPasswordVisible() ? 'text' : 'password'" nz-input formControlName="confirmPassword" placeholder="Confirm Password" />
+          </nz-input-group>
+          <ng-template #confirmSuffixTemplate>
+            <span nz-icon [nzType]="confirmPasswordVisible() ? 'eye' : 'eye-invisible'" (click)="toggleConfirmPasswordVisibility()"></span>
+          </ng-template>
+        </nz-form-control>
+        <ng-template #passwordErrorTpl let-control>
+          @if (control.hasError('required')) {
+            Please confirm your password
+          }
+          @if (control.hasError('passwordsMismatch')) {
+            Passwords do not match!
+          }
+        </ng-template>
+      </nz-form-item>
+      
+      @if(errorMessage()) {
+        <nz-alert class="mb-4" nzType="error" [nzMessage]="errorMessage()" nzShowIcon></nz-alert>
+      }
+
+      <button nz-button class="w-full mt-2" nzType="primary" [nzLoading]="isLoading()" [disabled]="registerForm.invalid">
+        Sign Up
+      </button>
+
+      <div class="mt-6 text-center text-text-secondary">
+        Already have an account? 
+        <a routerLink="/login" class="font-medium text-primary hover:text-primary-hover">Log in</a>
+      </div>
+    </form>
+  </div>
+</div>
