--- a/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
+++ b/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
@@ -1,1 +1,66 @@
-<p>answer-item works!</p>
+<div class="answer-wrapper" [class.is-solution]="answer().isSolution">
+  <div class="vote-container">
+    <app-vote 
+      [score]="answer().score"
+      [userVote]="answer().currentUserVote"
+      (vote)="handleVote($event)"
+    ></app-vote>
+    @if (answer().isSolution) {
+      <div class="solution-check" nz-tooltip nzTooltipTitle="Accepted Answer">
+        <span nz-icon nzType="check-circle" nzTheme="fill"></span>
+      </div>
+    }
+  </div>
+  
+  <div class="content-container">
+    <div class="prose dark:prose-invert max-w-none" [innerHTML]="answer().body"></div>
+    
+    <div class="action-bar">
+      <div class="actions">
+        @if (isQuestionAuthor() && !answer().isSolution) {
+          <button nz-button nzType="text" (click)="markAsSolution()" class="action-button solution-button">
+            <span nz-icon nzType="check-circle"></span>
+            Mark as Solution
+          </button>
+        }
+        <button nz-button nzType="text" (click)="isCommentFormVisible.set(!isCommentFormVisible())" class="action-button">
+          <span nz-icon nzType="message"></span>
+          Add Comment
+        </button>
+      </div>
+      
+      <div class="author-card">
+        <span class="text-xs">answered {{ answer().createdAt | timeAgo }}</span>
+        <a class="author-info" [routerLink]="['/users', answer().author.userId]">
+          <nz-avatar [nzSize]="24" [nzSrc]="answer().author.profilePhotoUrl ?? undefined" [nzText]="answer().author.username.charAt(0).toUpperCase()"></nz-avatar>
+          <span class="author-name">{{ answer().author.username }}</span>
+        </a>
+      </div>
+    </div>
+    
+    @if (isCommentFormVisible()) {
+      <div class="comment-form-wrapper">
+        <form [formGroup]="commentForm" (ngSubmit)="submitComment()">
+          <nz-form-item>
+            <nz-form-control>
+              <textarea nz-input formControlName="body" placeholder="Write a comment..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
+            </nz-form-control>
+          </nz-form-item>
+          <div class="flex justify-end">
+            <button nz-button nzType="primary" [disabled]="commentForm.invalid">Submit</button>
+          </div>
+        </form>
+      </div>
+    }
+    
+    <div class="comments-section">
+      @for (comment of answer().comments; track comment.commentId) {
+        <app-comment-item 
+          [comment]="comment"
+          [answerId]="answer().answerId"
+          (updateRequired)="updateRequired.emit()"
+        ></app-comment-item>
+      }
+    </div>
+  </div>
+</div>
