--- a/frontend/src/app/features/qa/components/comment-item/comment-item.component.html
+++ b/frontend/src/app/features/qa/components/comment-item/comment-item.component.html
@@ -1,1 +1,70 @@
-<p>comment-item works!</p>
+<div class="comment-thread-item" [class.is-collapsed]="isCollapsed()">
+  <div class="indentation-col">
+    <a [routerLink]="['/users', comment().author.userId]">
+      <nz-avatar [nzSize]="32" [nzSrc]="comment().author.profilePhotoUrl ?? undefined" [nzText]="comment().author.username.charAt(0).toUpperCase()"></nz-avatar>
+    </a>
+    <div class="thread-line" (click)="toggleCollapse()"></div>
+  </div>
+
+  <div class="content-col">
+    @if (isCollapsed()) {
+      <div class="collapsed-view" (click)="toggleCollapse()">
+        <span class="toggle-button">[+]</span>
+        <a class="author-link" [routerLink]="['/users', comment().author.userId]">{{ comment().author.username }}</a>
+        <span class="meta-info">{{ comment().score }} points</span>
+        <span class="meta-info">· {{ comment().createdAt | timeAgo }}</span>
+      </div>
+    }
+
+    @if (!isCollapsed()) {
+      <div class="expanded-view">
+        <div class="comment-header">
+          <button class="toggle-button" (click)="toggleCollapse()">[–]</button>
+          <a class="author-link" [routerLink]="['/users', comment().author.userId]">{{ comment().author.username }}</a>
+          <span class="meta-info">· {{ comment().score }} points</span>
+          <span class="meta-info">· {{ comment().createdAt | timeAgo }}</span>
+        </div>
+        
+        <div class="comment-body">
+          <p>{{ comment().body }}</p>
+        </div>
+
+        @if (authService.isUserLoggedIn()) {
+          <div class="action-bar">
+            <app-vote
+              [score]="comment().score"
+              [userVote]="comment().currentUserVote"
+              (vote)="handleVote($event)"
+              [isVertical]="false"
+            ></app-vote>
+            <button nz-button nzType="text" class="action-button" (click)="isReplyFormVisible.set(!isReplyFormVisible())">
+              <span nz-icon nzType="message"></span> Reply
+            </button>
+          </div>
+        }
+
+        @if (isReplyFormVisible()) {
+          <div class="reply-form-wrapper">
+            <form [formGroup]="replyForm" (ngSubmit)="submitReply()">
+              <textarea nz-input formControlName="body" placeholder="Write your reply..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
+              <div class="reply-form-actions">
+                <button nz-button nzType="text" (click)="isReplyFormVisible.set(false)">Cancel</button>
+                <button nz-button nzType="primary" [disabled]="replyForm.invalid">Reply</button>
+              </div>
+            </form>
+          </div>
+        }
+
+        <div class="nested-comments">
+          @for (child of comment().children; track child.commentId) {
+            <app-comment-item
+              [comment]="child"
+              [answerId]="answerId()"
+              (updateRequired)="updateRequired.emit()"
+            ></app-comment-item>
+          }
+        </div>
+      </div>
+    }
+  </div>
+</div>
